--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row top-section">
        
-        <nav class="col-md-4">
+        <nav class="col-md-4 col-sm-12 col-xs-col-12">
           <!--start component menu-->
             <ul>
               <li><a href="#" title="#">портфолио</a></li>
@@ -33,14 +33,14 @@
           <!--end component menu-->
         </nav>
 
-        <div class="col-md-4 logo-section">
+        <div class="col-md-4 col-sm-12 col-xs-col-12 logo-section">
           <a href="/" title="Fine Design">
-            <img src="/images/logo.png" title="Fine Design">
+            <img class="logo" src="/images/logo.png" title="Fine Design">
           </a>
         </div>
 
-        <div class="col-md-4 top-phone-section">
-          <div class="col-md-6">
+        <div class="col-md-4 col-sm-12 col-xs-col-12 top-phone-section">
+          <div class="col-md-7">
             <!--start include area-->
               <ul>
                 <li><strong>+7 (905) 403-25-20</strong></li>
@@ -48,7 +48,7 @@
               </ul>
             <!--end include area-->
           </div>
-          <div class="col-md-6 callback-section">
+          <div class="col-md-5 callback-section">
               <!--start component callback-->
                 <button class="feed-back-m">Обратный связь</button>
               <!--end component callback-->
@@ -106,7 +106,79 @@
         <!--end slider component-->
       </div>
     </div>
+  </div>
 
+  <main>
+    <!--start component last project-->
+    <div class="container last-project">
+      <div class="row last-project-head-row">
+        <div class="col-md-12 last-project-head">
+          <h2>последние проекты</h2>
+          <strong>Перед вами пять последних выполенных нами проектов</strong>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
+          <div class="last-project-cell">
+            <a href="#" title="#">
+              <img src="/images/project-img.jpg" title="#">
+            </a>
+            <div class="last-project-cell-head">
+              <a href="#" title="#">Зепашенное офисное помещение</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
+          <div class="last-project-cell">
+            <a href="#" title="#">
+              <img src="/images/project-img.jpg" title="#">
+            </a>
+            <div class="last-project-cell-head">
+              <a href="#" title="#">Зепашенное офисное помещение</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
+          <div class="last-project-cell">
+            <a href="#" title="#">
+              <img src="/images/project-img.jpg" title="#">
+            </a>
+            <div class="last-project-cell-head">
+              <a href="#" title="#">Зепашенное офисное помещение</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
+          <div class="last-project-cell">
+            <a href="#" title="#">
+              <img src="/images/project-img.jpg" title="#">
+            </a>
+            <div class="last-project-cell-head">
+              <a href="#" title="#">Зепашенное офисное помещение</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
+          <div class="last-project-cell">
+            <a href="#" title="#">
+              <img src="/images/project-img.jpg" title="#">
+            </a>
+            <div class="last-project-cell-head">
+              <a href="#" title="#">Зепашенное офисное помещение</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  <!--end component last project-->
+  </main>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/swiper.min.js"></script>
