--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
           <strong>Перед вами пять последних выполенных нами проектов</strong>
         </div>
       </div>
-
       <div class="row">
-
+      <!--start foreach one ineretion item markup-->
         <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
           <div class="last-project-cell">
             <a href="#" title="#">
@@ -130,54 +129,22 @@
             </div>
           </div>
         </div>
-
-        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
-          <div class="last-project-cell">
-            <a href="#" title="#">
-              <img src="/images/project-img.jpg" title="#">
-            </a>
-            <div class="last-project-cell-head">
-              <a href="#" title="#">Зепашенное офисное помещение</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
-          <div class="last-project-cell">
-            <a href="#" title="#">
-              <img src="/images/project-img.jpg" title="#">
-            </a>
-            <div class="last-project-cell-head">
-              <a href="#" title="#">Зепашенное офисное помещение</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
-          <div class="last-project-cell">
-            <a href="#" title="#">
-              <img src="/images/project-img.jpg" title="#">
-            </a>
-            <div class="last-project-cell-head">
-              <a href="#" title="#">Зепашенное офисное помещение</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
-          <div class="last-project-cell">
-            <a href="#" title="#">
-              <img src="/images/project-img.jpg" title="#">
-            </a>
-            <div class="last-project-cell-head">
-              <a href="#" title="#">Зепашенное офисное помещение</a>
-            </div>
-          </div>
-        </div>
-
+        <!--end foreach-->
       </div>
     </div>
   <!--end component last project-->
+
+  <!--start component last portfolio-->
+  <div class="container">
+    <div class="row last-portfolio-head-row">
+      <div class="col-md-12 last-portfolio-head">
+        <strong>Понравилось? Тогда предлагаем</strong>
+        <a href="#" title="Посмотреть все">посмотреть все портфолио</a>
+        <strong>Эти профессионалы</strong>
+      </div>
+    </div>
+  </div>
+  <!--end component last portfolio-->
   </main>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="/js/bootstrap.min.js"></script>
