--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="row">
-      <!--start foreach one ineretion item markup-->
+      <!--start foreach iterat item markup-->
         <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
           <div class="last-project-cell">
             <a href="#" title="#">
@@ -141,6 +141,18 @@
         <strong>Понравилось? Тогда предлагаем</strong>
         <a href="#" title="Посмотреть все">посмотреть все портфолио</a>
         <strong>Эти профессионалы</strong>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="last-portfolio-cell">
+          <a href="#" title="#">
+             <img src="/images/portfolio-img.jpg" title="#">
+          </a>
+          <div class="last-portfolio-cell-head">
+            <a href="#" title="#">Зепашенное офисное помещение</a>
+          </div>
+        </div>       
       </div>
     </div>
   </div>
