--- a/index.html
+++ b/index.html
@@ -138,23 +138,91 @@
   <div class="container">
     <div class="row last-portfolio-head-row">
       <div class="col-md-12 last-portfolio-head">
-        <strong>Понравилось? Тогда предлагаем</strong>
-        <a href="#" title="Посмотреть все">посмотреть все портфолио</a>
-        <strong>Эти профессионалы</strong>
+        <strong class="text-head-one">Понравилось? Тогда предлагаем</strong>
+        <a class="all-portfolio" href="#" title="Посмотреть все">посмотреть все портфолио</a>
+        <strong class="text-head-two">Эти профессионалы</strong>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="last-portfolio-cell">
           <a href="#" title="#">
              <img src="/images/portfolio-img.jpg" title="#">
           </a>
           <div class="last-portfolio-cell-head">
-            <a href="#" title="#">Зепашенное офисное помещение</a>
+            <a href="#" title="#"><b>Дэйвид блей</b><br>Зепашенное офисное помещение</a>
           </div>
         </div>       
       </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="last-portfolio-cell">
+          <a href="#" title="#">
+             <img src="/images/portfolio-img.jpg" title="#">
+          </a>
+          <div class="last-portfolio-cell-head">
+            <a href="#" title="#"><b>Дэйвид блей</b><br>Зепашенное офисное помещение</a>
+          </div>
+        </div>       
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="last-portfolio-cell">
+          <a href="#" title="#">
+             <img src="/images/portfolio-img.jpg" title="#">
+          </a>
+          <div class="last-portfolio-cell-head">
+            <a href="#" title="#"><b>Дэйвид блей</b><br>Зепашенное офисное помещение</a>
+          </div>
+        </div>       
+      </div>
+
     </div>
+
+    <div class="row last-portfolio-head-row">
+      <div class="col-md-12 last-portfolio-head">
+        <strong class="text-head-two">с вами работать не будут, зато будем работать мы!</strong>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="last-portfolio-cell">
+          <a href="#" title="#">
+             <img src="/images/portfolio-img.jpg" title="#">
+          </a>
+          <div class="last-portfolio-cell-head">
+            <a href="#" title="#"><b>Дэйвид блей</b><br>Зепашенное офисное помещение</a>
+          </div>
+        </div>       
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="last-portfolio-cell">
+          <a href="#" title="#">
+             <img src="/images/portfolio-img.jpg" title="#">
+          </a>
+          <div class="last-portfolio-cell-head">
+            <a href="#" title="#"><b>Дэйвид блей</b><br>Зепашенное офисное помещение</a>
+          </div>
+        </div>       
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="last-portfolio-cell">
+          <a href="#" title="#">
+             <img src="/images/portfolio-img.jpg" title="#">
+          </a>
+          <div class="last-portfolio-cell-head">
+            <a href="#" title="#"><b>Дэйвид блей</b><br>Зепашенное офисное помещение</a>
+          </div>
+        </div>       
+      </div>
+
+    </div>
+    
   </div>
   <!--end component last portfolio-->
   </main>
