--- a/index.html
+++ b/index.html
@@ -130,6 +130,46 @@
           </div>
         </div>
         <!--end foreach-->
+        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
+          <div class="last-project-cell">
+            <a href="#" title="#">
+              <img src="/images/project-img.jpg" title="#">
+            </a>
+            <div class="last-project-cell-head">
+              <a href="#" title="#">Зепашенное офисное помещение</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
+          <div class="last-project-cell">
+            <a href="#" title="#">
+              <img src="/images/project-img.jpg" title="#">
+            </a>
+            <div class="last-project-cell-head">
+              <a href="#" title="#">Зепашенное офисное помещение</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
+          <div class="last-project-cell">
+            <a href="#" title="#">
+              <img src="/images/project-img.jpg" title="#">
+            </a>
+            <div class="last-project-cell-head">
+              <a href="#" title="#">Зепашенное офисное помещение</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-1-5 col-sm-3 col-xs-s-2 col-xs-12">
+          <div class="last-project-cell">
+            <a href="#" title="#">
+              <img src="/images/project-img.jpg" title="#">
+            </a>
+            <div class="last-project-cell-head">
+              <a href="#" title="#">Зепашенное офисное помещение</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   <!--end component last project-->
@@ -225,6 +265,79 @@
     
   </div>
   <!--end component last portfolio-->
+  
+   <!--start component we-->
+  <div class="container">
+    <div class="we-head-row">
+      <div class="col-md-12 we-portfolio-head">
+        <strong class="text-head-two">Почему мы сделаем это лучше?</strong>
+      </div>
+    </div>
+    <div class="row">
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="we-cell">
+		 <a href="#" title="#">Читаем ваши мысли</a>
+          <a href="#" title="#">
+             <img src="/images/we-img.png" title="#">
+          </a>
+		  <div class="we-text">
+			При общении с заказчиками мы просим максимально сконцентрироваться на проекте. Даже если вы забудите изначально озвучить какие-то задачи или пожелания, мы дойдём до них сами.
+		  </div>
+        </div>       
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="we-cell">
+		 <a href="#" title="#">Воруем не стесняясь</a>
+          <a href="#" title="#">
+             <img src="/images/we-img.png" title="#">
+          </a>
+		  <div class="we-text">
+			При общении с заказчиками мы просим максимально сконцентрироваться на проекте. Даже если вы забудите изначально озвучить какие-то задачи или пожелания, мы дойдём до них сами.
+		  </div>
+        </div>       
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <div class="we-cell">
+		 <a href="#" title="#">Самые крутые</a>
+          <a href="#" title="#">
+             <img src="/images/we-img.png" title="#">
+          </a>
+		  <div class="we-text">
+			При общении с заказчиками мы просим максимально сконцентрироваться на проекте. Даже если вы забудите изначально озвучить какие-то задачи или пожелания, мы дойдём до них сами.
+		  </div>
+        </div>       
+      </div>	  
+	  
+    </div>
+  </div>
+  <!--end component last wee-->
+  
+  <div class="container">
+	<div class="row">
+		<div class="col-md-12 social-section-head">
+			<strong>Когда наша группа наберет 10 000 подписчиков, <br>Катя покажет свои татушки</strong>
+		</div>
+	</div>
+	<div class="row social-section">
+		<div class="col-md-6">
+			<!--start include area vk-->
+				<img src="/images/vk.png">
+			<!--end include area vk-->
+		</div>
+		<div class="col-md-6">
+			<img class="katya" src="/images/katya.png" title="Катя и ее татушки ^-^">
+		</div>
+	</div>
+  </div>
+  
+  <div class="container">
+	<div class="row social-section-head">
+		<strong>Вам еще не понятно?</strong>
+	</div>
+  </div>
   </main>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="/js/bootstrap.min.js"></script>
