--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
     <![endif]-->
-<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="container">
@@ -40,7 +39,7 @@
         </div>
 
         <div class="col-md-4 col-sm-12 col-xs-col-12 top-phone-section">
-          <div class="col-md-7">
+          <div class="col-md-6">
             <!--start include area-->
               <ul>
                 <li><strong>+7 (905) 403-25-20</strong></li>
@@ -48,7 +47,7 @@
               </ul>
             <!--end include area-->
           </div>
-          <div class="col-md-5 callback-section">
+          <div class="col-md-6 callback-section">
               <!--start component callback-->
                 <button class="feed-back-m">Обратный связь</button>
               <!--end component callback-->
@@ -334,9 +333,67 @@
   </div>
   
   <div class="container">
-	<div class="row social-section-head">
+	<div class="row social-section-head feed-back-bottom">
 		<strong>Вам еще не понятно?</strong>
 	</div>
+	<div class="row feed-btn-wrapper">
+		<!--start feed back button-->
+			<button class="feed-b-btn">Заказать дизайн интерьера немедленно!</button>
+		<!--end feed back button-->
+	</div>
+	<div class="row about">
+		<div class="col-md-12">
+			<!--start include area about-->
+				<h1 style="font-size:1.7em">
+					Студия дизайна интерьеров. Дизайн домов, квартир, кафе, ресторанов и других общественных заведений в Краснодаре.
+				</h1>
+				<p>Мы работаем для тех, кто предпочитает красоту, изысканность и стиль. Мы реализуем ваши идеи и желания в неповторимые образы интерьеров помещений любых типов. При сотрудничестве с нашей студией вам необходимо полностью довериться дизайнеру, который спроектирует, нарисует и воплотит в реальность даже самые необычные идеи о комфортной квартире, доме или стильном интерьере вашего бизнеса или офиса.</p>
+
+				<p>Планировка внутренней архитектуры, материалы отделки помещения, мебель, техника и предметы декора - всё должно составлять единый образ, единую систему координат пространства. Специалисты нашей студии дизайна интерьеров в Краснодаре воплощают ваши желания в комфорт и удобство, которые можно не только увидеть своими глазами, но и ощутить после реализации.</p>
+
+				<p>Дизайн интерьера квартиры – это искусство, которое требует грамотного, тщательного подхода и не терпит халатности. Дизайнер целиком и полностью отдается своей работе и тогда из под его руки выходят действительного качественные вещи, вселяющие владельцу уверенность и полное удовлетворение.</p>
+
+				<p>Дизайн интерьера в Краснодаре: любые творческие идеи, максимальная функциональность и эргономика. Наш художественный гений неиссякаем, и мы готовы сделать дизайн проект квартиры, дома в любом существующем стиле.</p>
+
+				<p>Воплощая дизайн квартиры,студии или дома создаем эмоциональную атмосферу в деталях. Соблюдая при этом единый стилистический замысел, органично вплетая в общую канву игру света и предметы декора. Наш взгляд на жилое пространство выходит за рамки повседневности благодаря оригинальному дизайну интерьера.</p>
+								
+			<!--end include area about-->
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12 social-section-head">
+			<strong>Вам и этого мало? Тогда смотрите нас тут:</strong>
+			<!--start include area-->
+			<ul class="link-section">
+				<li><a href="#" title="homily"><img src="/images/homily.png" title="homily"></a></li>
+				<li><a href="#" title="my-home"><img src="/images/my-home.png" title="my-home"></a></li>
+				<li><a href="#" title="in-my-room"><img src="/images/in-my-room.png" title="inmyroom"></a></li>
+				<li><a href="#" title="houzz"><img src="/images/houzz.png" title="houzz"></a></li>
+				<li><a href="#" title="hi-home"><img src="/images/hi-home.png" title="hi-home"></a></li>
+			</ul>
+			<!--end include area-->
+		</div>
+	</div>
+	<footer class="row">
+		<div class="col-md-3">
+			<strong class="coop">Fine Design - дизайн интерьров. 2014-2015.<strong>
+		</div>
+		
+		<div class="col-md-3">
+			<ul class="social-ico">
+				<li><a href="" class="vk"></a></li>
+				<li><a href="" class="fb"></a></li>
+				<li><a href="" class="inst"></a></li>
+			</ul>
+		</div>
+		
+		<div class="col-md-3">
+		</div>
+		
+		<div class="col-md-3">
+			Никому не говорите, кто <a href="http://aliens.pro" title="aliens.pro">сделал</a> этот сайт!
+		</div>
+	</footer>
   </div>
   </main>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
