--- a/index.html
+++ b/index.html
@@ -73,18 +73,10 @@
 
               <div class="swiper-slide">
                 <div class="slide-head">
-                  <h2>Заголовок слайда2</h2>
+                  <h2>Заголовок слайда1</h2>
                 </div>
                 <a class="see-detail" href="#" title="Подробнее">Хочу подробнее</a>
-                <img src="/images/slide-1.jpg" title="slide">
-              </div>
-
-              <div class="swiper-slide">
-                <div class="slide-head">
-                  <h2>Заголовок слайда3</h2>
-                </div>
-                <a class="see-detail" href="#" title="Подробнее">Хочу подробнее</a>
-                <img src="/images/slide-1.jpg" title="slide">
+                <div style="background:url(/images/slide-1.jpg);height: 100%;width: 100%;"> </div>
               </div>
 
           </div>
