--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <h2>Заголовок слайда1</h2>
                 </div>
                 <a class="see-detail" href="#" title="Подробнее">Хочу подробнее</a>
-                <div style="background:url(/images/slide-1.jpg);height: 100%;width: 100%;"> </div>
+                <div style="background: rgba(0, 0, 0, 0) url(/images/slide-1.jpg) no-repeat scroll center center / contain ;height: 100%;width: 100%;"> </div>
               </div>
 
               <div class="swiper-slide">
@@ -76,7 +76,7 @@
                   <h2>Заголовок слайда1</h2>
                 </div>
                 <a class="see-detail" href="#" title="Подробнее">Хочу подробнее</a>
-                <div style="background:url(/images/slide-1.jpg);height: 100%;width: 100%;"> </div>
+                <div style="background: rgba(0, 0, 0, 0) url(/images/slide-1.jpg) no-repeat scroll center center / contain ;height: 100%;width: 100%;"> </div>
               </div>
 
           </div>
