--- a/index.html
+++ b/index.html
@@ -20,37 +20,48 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container">
-      <div class="row top-section">
-        <nav class="col-md-4 col-sm-12 col-xs-col-12">
-          <!--start component menu-->
-            <ul>
-              <li><a class="selected" href="#" title="#">портфолио</a></li>
-              <li><a href="#" title="#">блог</a></li>
-              <li><a href="#" title="#">о студии</a></li>
-            </ul>
-          <!--end component menu-->
-        </nav>
-
-        <div class="col-md-4 col-sm-12 col-xs-col-12 logo-section">
-          <a href="/" title="Fine Design">
-            <img class="logo" src="/images/logo.png" alt="Fine Design">
-          </a>
-        </div>
-
-        <div class="col-md-4 col-sm-12 col-xs-col-12 top-phone-section">
-          <div class="col-md-6">
-            <!--start include area-->
-              <ul>
-                <li><strong>+7 (905) 403-25-20</strong></li>
-                <li><strong>+7 (909) 457-05-00</strong></li>
+    <div class="container-fluid top-fixed">
+      <div class="container">
+        <div class="row top-section">
+          <nav class="col-md-4 col-sm-12 col-xs-col-12">
+            <!--start component menu-->
+              <button id="menu-show" class="show-menu">Меню</button>
+              <ul id="menu-top">
+                <li><a class="selected" href="#" title="#">портфолио</a></li>
+                <li><a href="#" title="#">блог</a></li>
+                <li><a href="#" title="#">о студии</a></li>
               </ul>
-            <!--end include area-->
+              <script>
+                $(document).ready(function(){
+                   $('#menu-show').click(function(){
+                    $('#menu-top').slideToggle();
+                  });                 
+                });
+
+              </script>
+            <!--end component menu-->
+          </nav>
+
+          <div class="col-md-4 col-sm-12 col-xs-col-12 logo-section">
+            <a href="/" title="Fine Design">
+              <img class="logo" src="/images/logo.png" alt="Fine Design">
+            </a>
           </div>
-          <div class="col-md-6 callback-section">
-              <!--start component callback-->
-                <button class="feed-back-m">Обратный связь</button>
-              <!--end component callback-->
+
+          <div class="col-md-4 col-sm-12 col-xs-col-12 top-phone-section">
+            <div class="col-md-6">
+              <!--start include area-->
+                <ul>
+                  <li><strong>+7 (905) 403-25-20</strong></li>
+                  <li><strong>+7 (909) 457-05-00</strong></li>
+                </ul>
+              <!--end include area-->
+            </div>
+            <div class="col-md-6 callback-section">
+                <!--start component callback-->
+                  <button class="feed-back-m">Обратный связь</button>
+                <!--end component callback-->
+            </div>
           </div>
         </div>
       </div>
