--- a/blog.html
+++ b/blog.html
@@ -76,8 +76,8 @@
       </div>
 
       <div class="row">
-        <div class="col-md-12">
-          <strong class="page-descr">Описание раздела</strong>
+        <div class="col-md-12 page-descr">
+          <strong>Описание раздела</strong>
         </div>
       </div>
     <!--end section head on seconds page-->
@@ -86,7 +86,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-6 col-sm-12 col-xs-12 blog-list-item">
             <div class="blog-list-cell">
               <div class="blog-list-top-cell">
                   <span class="blog-list-data">12.07.2015</span>
@@ -99,12 +99,12 @@
               <div class="blog-list-bottom-cell">
                 <span class="see-count">12</span>
                 <span class="like-count">4</span>
-                <a href="#" class="see-detal-item">Хочу знать больше</a>
+                <a href="#" class="see-detal-item">Хочу знать больше!</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-6 col-sm-12 col-xs-12 blog-list-item">
             <div class="blog-list-cell">
               <div class="blog-list-top-cell">
                   <span class="blog-list-data">12.07.2015</span>
@@ -117,12 +117,12 @@
               <div class="blog-list-bottom-cell">
                 <span class="see-count">12</span>
                 <span class="like-count">4</span>
-                <a href="#" class="see-detal-item">Хочу знать больше</a>
+                <a href="#" class="see-detal-item">Хочу знать больше!</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-6 col-sm-12 col-xs-12 blog-list-item">
             <div class="blog-list-cell">
               <div class="blog-list-top-cell">
                   <span class="blog-list-data">12.07.2015</span>
@@ -135,12 +135,12 @@
               <div class="blog-list-bottom-cell">
                 <span class="see-count">12</span>
                 <span class="like-count">4</span>
-                <a href="#" class="see-detal-item">Хочу знать больше</a>
+                <a href="#" class="see-detal-item">Хочу знать больше!</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-6 col-sm-12 col-xs-12 blog-list-item">
             <div class="blog-list-cell">
               <div class="blog-list-top-cell">
                   <span class="blog-list-data">12.07.2015</span>
@@ -153,12 +153,12 @@
               <div class="blog-list-bottom-cell">
                 <span class="see-count">12</span>
                 <span class="like-count">4</span>
-                <a href="#" class="see-detal-item">Хочу знать больше</a>
+                <a href="#" class="see-detal-item">Хочу знать больше!</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-6 col-sm-12 col-xs-12 blog-list-item">
             <div class="blog-list-cell">
               <div class="blog-list-top-cell">
                   <span class="blog-list-data">12.07.2015</span>
@@ -171,12 +171,12 @@
               <div class="blog-list-bottom-cell">
                 <span class="see-count">12</span>
                 <span class="like-count">4</span>
-                <a href="#" class="see-detal-item">Хочу знать больше</a>
+                <a href="#" class="see-detal-item">Хочу знать больше!</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-6 col-sm-12 col-xs-12 blog-list-item">
             <div class="blog-list-cell">
               <div class="blog-list-top-cell">
                   <span class="blog-list-data">12.07.2015</span>
@@ -189,7 +189,7 @@
               <div class="blog-list-bottom-cell">
                 <span class="see-count">12</span>
                 <span class="like-count">4</span>
-                <a href="#" class="see-detal-item">Хочу знать больше</a>
+                <a href="#" class="see-detal-item">Хочу знать больше!</a>
               </div>
             </div>
           </div>
