--- a/blog.html
+++ b/blog.html
@@ -195,7 +195,7 @@
           </div>
         </div>
       </div>      
-    <!--end component blog detail-->
+    <!--end component blog list-->
   </main>
   <footer class="container">
     <div class="row">
