--- a/blog-detal.html
+++ b/blog-detal.html
@@ -76,7 +76,18 @@
       </div>
     <!--end section head on seconds page-->
     </div>
-    
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<!--start include area social widgets-->
+				<span class="see-count">Посмотрели 12 посетителей</span>
+                <span class="like-count">Нравится 4 посетителям</span>
+				<!--end include area social widgets-->
+			</div>
+		</div>
+	</div>
+  
   </main>
   <footer class="container">
     <div class="row">
