--- a/blog-detal.html
+++ b/blog-detal.html
@@ -76,18 +76,29 @@
       </div>
     <!--end section head on seconds page-->
     </div>
-
+<!--start component blog-detail-->
 	<div class="container">
-		<div class="row">
+		<div class="row blog-detail-top">
 			<div class="col-md-12">
+        <span class="blog-detail-data">12.12.2012</span>
 				<!--start include area social widgets-->
 				<span class="see-count">Посмотрели 12 посетителей</span>
-                <span class="like-count">Нравится 4 посетителям</span>
+        <span class="like-count">Нравится 4 посетителям</span>
 				<!--end include area social widgets-->
 			</div>
 		</div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <img src="/images/blog-item.png" alt="#" class="blog-detail-img">
+        <p>
+          Товарищи! реализация намеченных плановых заданий способствует подготовки и реализации новых предложений. Значимость этих проблем настолько очевидна, что новая модель организационной деятельности обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. С другой стороны постоянный количественный рост и сфера нашей активности требуют определения и уточнения системы обучения кадров, соответствует насущным потребностям. Повседневная практика показывает, что рамки и место обучения кадров играет важную роль в формировании новых предложений. Товарищи! консультация с широким активом представляет собой интересный эксперимент проверки системы обучения кадров, соответствует насущным потребностям. 
+        </p>
+      </div>
+    </div>
+
 	</div>
-  
+<!--end component blog-detail-->
   </main>
   <footer class="container">
     <div class="row">
@@ -115,5 +126,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/swiper.min.js"></script>
+  <script src="/js/app.js"></script>
   </body>
 </html>
