--- a/blog.html
+++ b/blog.html
@@ -223,5 +223,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/swiper.min.js"></script>
+  <script src="/js/app.js"></script>
   </body>
 </html>
