--- a/index.html
+++ b/index.html
@@ -360,7 +360,10 @@
     	</div>
     	<div class="row">
     		<div class="col-md-12 social-section-head">
+          <!--start include area head-->
     			<strong>Вам и этого мало? Тогда смотрите нас тут:</strong>
+          <!--end include area head-->
+          
     			<!--start include area-->
     			<ul class="link-section">
     				<li><a href="#" title="homily"><img src="/images/homily.png" alt="homily"></a></li>
